@@ -170,6 +170,20 @@ public abstract class DataInput implements Cloneable {
   }
 
   /**
+   * Reads a specified number of ints into an array at the specified offset.
+   *
+   * @param dst the array to read bytes into
+   * @param offset the offset in the array to start storing ints
+   * @param length the number of ints to read
+   */
+  public void readInts(int[] dst, int offset, int length) throws IOException {
+    Objects.checkFromIndexSize(offset, length, dst.length);
+    for (int i = 0; i < length; ++i) {
+      dst[offset + i] = readInt();
+    }
+  }
+
+  /**
    * Reads a specified number of floats into an array at the specified offset.
    *
    * @param floats the array to read bytes into
