@@ -24,31 +24,43 @@ import org.apache.lucene.store.IndexInput;
 import org.apache.lucene.util.DocBaseBitSetIterator;
 import org.apache.lucene.util.FixedBitSet;
 
-class DocIdsWriter {
+final class DocIdsWriter {
 
-  private DocIdsWriter() {}
+  private static final byte CONTINUOUS_IDS = (byte) -2;
+  private static final byte BITSET_IDS = (byte) -1;
+  private static final byte DELTA_BPV_16 = (byte) 16;
+  private static final byte BPV_24 = (byte) 24;
+  private static final byte BPV_32 = (byte) 32;
+  // These signs are legacy, should no longer be used in the writing side.
+  private static final byte LEGACY_DELTA_VINT = (byte) 0;
 
-  static void writeDocIds(int[] docIds, int start, int count, DataOutput out) throws IOException {
+  private final int[] scratch;
+
+  DocIdsWriter(int maxPointsInLeaf) {
+    scratch = new int[maxPointsInLeaf];
+  }
+
+  void writeDocIds(int[] docIds, int start, int count, DataOutput out) throws IOException {
     // docs can be sorted either when all docs in a block have the same value
     // or when a segment is sorted
-    boolean sorted = true;
     boolean strictlySorted = true;
+    int min = docIds[0];
+    int max = docIds[0];
     for (int i = 1; i < count; ++i) {
       int last = docIds[start + i - 1];
       int current = docIds[start + i];
-      if (last > current) {
-        sorted = strictlySorted = false;
-        break;
-      } else if (last == current) {
+      if (last >= current) {
         strictlySorted = false;
       }
+      min = Math.min(min, current);
+      max = Math.max(max, current);
     }
 
-    int min2max = docIds[start + count - 1] - docIds[start] + 1;
+    int min2max = max - min + 1;
     if (strictlySorted) {
       if (min2max == count) {
         // continuous ids, typically happens when segment is sorted
-        out.writeByte((byte) -2);
+        out.writeByte(CONTINUOUS_IDS);
         out.writeVInt(docIds[start]);
         return;
       } else if (min2max <= (count << 4)) {
@@ -56,26 +68,31 @@ class DocIdsWriter {
         // Only trigger bitset optimization when max - min + 1 <= 16 * count in order to avoid
         // expanding too much storage.
         // A field with lower cardinality will have higher probability to trigger this optimization.
-        out.writeByte((byte) -1);
+        out.writeByte(BITSET_IDS);
         writeIdsAsBitSet(docIds, start, count, out);
         return;
       }
     }
-    if (sorted) {
-      out.writeByte((byte) 0);
-      int previous = 0;
-      for (int i = 0; i < count; ++i) {
-        int doc = docIds[start + i];
-        out.writeVInt(doc - previous);
-        previous = doc;
+
+    if (min2max <= 0xFFFF) {
+      out.writeByte(DELTA_BPV_16);
+      for (int i = 0; i < count; i++) {
+        scratch[i] = docIds[start + i] - min;
+      }
+      out.writeVInt(min);
+      final int halfLen = count >>> 1;
+      for (int i = 0; i < halfLen; ++i) {
+        scratch[i] = scratch[halfLen + i] | (scratch[i] << 16);
+      }
+      for (int i = 0; i < halfLen; i++) {
+        out.writeInt(scratch[i]);
+      }
+      if ((count & 1) == 1) {
+        out.writeShort((short) scratch[count - 1]);
       }
     } else {
-      long max = 0;
-      for (int i = 0; i < count; ++i) {
-        max |= Integer.toUnsignedLong(docIds[start + i]);
-      }
-      if (max <= 0xffffff) {
-        out.writeByte((byte) 24);
+      if (max <= 0xFFFFFF) {
+        out.writeByte(BPV_24);
         // write them the same way we are reading them.
         int i;
         for (i = 0; i < count - 7; i += 8) {
@@ -103,8 +120,8 @@ class DocIdsWriter {
           out.writeByte((byte) docIds[start + i]);
         }
       } else {
-        out.writeByte((byte) 32);
-        for (int i = 0; i < count; ++i) {
+        out.writeByte(BPV_32);
+        for (int i = 0; i < count; i++) {
           out.writeInt(docIds[start + i]);
         }
       }
@@ -145,23 +162,26 @@ class DocIdsWriter {
   }
 
   /** Read {@code count} integers into {@code docIDs}. */
-  static void readInts(IndexInput in, int count, int[] docIDs) throws IOException {
+  void readInts(IndexInput in, int count, int[] docIDs) throws IOException {
     final int bpv = in.readByte();
     switch (bpv) {
-      case -2:
+      case CONTINUOUS_IDS:
         readContinuousIds(in, count, docIDs);
         break;
-      case -1:
+      case BITSET_IDS:
         readBitSet(in, count, docIDs);
         break;
-      case 0:
-        readDeltaVInts(in, count, docIDs);
+      case DELTA_BPV_16:
+        readDelta16(in, count, docIDs);
         break;
-      case 32:
+      case BPV_24:
+        readInts24(in, count, docIDs);
+        break;
+      case BPV_32:
         readInts32(in, count, docIDs);
         break;
-      case 24:
-        readInts24(in, count, docIDs);
+      case LEGACY_DELTA_VINT:
+        readLegacyDeltaVInts(in, count, docIDs);
         break;
       default:
         throw new IOException("Unsupported number of bits per value: " + bpv);
@@ -184,6 +204,15 @@ class DocIdsWriter {
     }
   }
 
+  private static void readLegacyDeltaVInts(IndexInput in, int count, int[] docIDs)
+      throws IOException {
+    int doc = 0;
+    for (int i = 0; i < count; i++) {
+      doc += in.readVInt();
+      docIDs[i] = doc;
+    }
+  }
+
   private static void readBitSet(IndexInput in, int count, int[] docIDs) throws IOException {
     DocIdSetIterator iterator = readBitSetIterator(in, count);
     int docId, pos = 0;
@@ -193,17 +222,17 @@ class DocIdsWriter {
     assert pos == count : "pos: " + pos + "count: " + count;
   }
 
-  private static void readDeltaVInts(IndexInput in, int count, int[] docIDs) throws IOException {
-    int doc = 0;
-    for (int i = 0; i < count; i++) {
-      doc += in.readVInt();
-      docIDs[i] = doc;
+  private static void readDelta16(IndexInput in, int count, int[] docIDs) throws IOException {
+    final int min = in.readVInt();
+    final int halfLen = count >>> 1;
+    in.readInts(docIDs, 0, halfLen);
+    for (int i = 0; i < halfLen; ++i) {
+      int l = docIDs[i];
+      docIDs[i] = (l >>> 16) + min;
+      docIDs[halfLen + i] = (l & 0xFFFF) + min;
     }
-  }
-
-  private static void readInts32(IndexInput in, int count, int[] docIDs) throws IOException {
-    for (int i = 0; i < count; i++) {
-      docIDs[i] = in.readInt();
+    if ((count & 1) == 1) {
+      docIDs[count - 1] = Short.toUnsignedInt(in.readShort()) + min;
     }
   }
 
@@ -227,34 +256,58 @@ class DocIdsWriter {
     }
   }
 
+  private static void readInts32(IndexInput in, int count, int[] docIDs) throws IOException {
+    in.readInts(docIDs, 0, count);
+  }
+
   /**
    * Read {@code count} integers and feed the result directly to {@link
    * IntersectVisitor#visit(int)}.
    */
-  static void readInts(IndexInput in, int count, IntersectVisitor visitor) throws IOException {
+  void readInts(IndexInput in, int count, IntersectVisitor visitor) throws IOException {
     final int bpv = in.readByte();
     switch (bpv) {
-      case -2:
+      case CONTINUOUS_IDS:
         readContinuousIds(in, count, visitor);
         break;
-      case -1:
+      case BITSET_IDS:
         readBitSet(in, count, visitor);
         break;
-      case 0:
-        readDeltaVInts(in, count, visitor);
+      case DELTA_BPV_16:
+        readDelta16(in, count, visitor);
         break;
-      case 32:
+      case BPV_24:
+        readInts24(in, count, visitor);
+        break;
+      case BPV_32:
         readInts32(in, count, visitor);
         break;
-      case 24:
-        readInts24(in, count, visitor);
+      case LEGACY_DELTA_VINT:
+        readLegacyDeltaVInts(in, count, visitor);
         break;
       default:
         throw new IOException("Unsupported number of bits per value: " + bpv);
     }
   }
 
-  private static void readDeltaVInts(IndexInput in, int count, IntersectVisitor visitor)
+  private static void readBitSet(IndexInput in, int count, IntersectVisitor visitor)
+      throws IOException {
+    DocIdSetIterator bitSetIterator = readBitSetIterator(in, count);
+    visitor.visit(bitSetIterator);
+  }
+
+  private static void readContinuousIds(IndexInput in, int count, IntersectVisitor visitor)
+      throws IOException {
+    int start = in.readVInt();
+    int extra = start & 63;
+    int offset = start - extra;
+    int numBits = count + extra;
+    FixedBitSet bitSet = new FixedBitSet(numBits);
+    bitSet.set(extra, numBits);
+    visitor.visit(new DocBaseBitSetIterator(bitSet, count, offset));
+  }
+
+  private static void readLegacyDeltaVInts(IndexInput in, int count, IntersectVisitor visitor)
       throws IOException {
     int doc = 0;
     for (int i = 0; i < count; i++) {
@@ -263,10 +316,10 @@ class DocIdsWriter {
     }
   }
 
-  private static void readInts32(IndexInput in, int count, IntersectVisitor visitor)
-      throws IOException {
+  private void readDelta16(IndexInput in, int count, IntersectVisitor visitor) throws IOException {
+    readDelta16(in, count, scratch);
     for (int i = 0; i < count; i++) {
-      visitor.visit(in.readInt());
+      visitor.visit(scratch[i]);
     }
   }
 
@@ -291,20 +344,10 @@ class DocIdsWriter {
     }
   }
 
-  private static void readBitSet(IndexInput in, int count, IntersectVisitor visitor)
-      throws IOException {
-    DocIdSetIterator bitSetIterator = readBitSetIterator(in, count);
-    visitor.visit(bitSetIterator);
-  }
-
-  private static void readContinuousIds(IndexInput in, int count, IntersectVisitor visitor)
-      throws IOException {
-    int start = in.readVInt();
-    int extra = start & 63;
-    int offset = start - extra;
-    int numBits = count + extra;
-    FixedBitSet bitSet = new FixedBitSet(numBits);
-    bitSet.set(extra, numBits);
-    visitor.visit(new DocBaseBitSetIterator(bitSet, count, offset));
+  private void readInts32(IndexInput in, int count, IntersectVisitor visitor) throws IOException {
+    in.readInts(scratch, 0, count);
+    for (int i = 0; i < count; i++) {
+      visitor.visit(scratch[i]);
+    }
   }
 }
