@@ -60,6 +60,21 @@ public class TestDocIdsWriter extends LuceneTestCase {
     }
   }
 
+  public void testCluster() throws Exception {
+    int numIters = atLeast(100);
+    try (Directory dir = newDirectory()) {
+      for (int iter = 0; iter < numIters; ++iter) {
+        int[] docIDs = new int[1 + random().nextInt(5000)];
+        int min = random().nextInt(1000);
+        final int bpv = TestUtil.nextInt(random(), 1, 16);
+        for (int i = 0; i < docIDs.length; ++i) {
+          docIDs[i] = min + TestUtil.nextInt(random(), 0, (1 << bpv) - 1);
+        }
+        test(dir, docIDs);
+      }
+    }
+  }
+
   public void testBitSet() throws Exception {
     int numIters = atLeast(100);
     try (Directory dir = newDirectory()) {
@@ -93,8 +108,9 @@ public class TestDocIdsWriter extends LuceneTestCase {
 
   private void test(Directory dir, int[] ints) throws Exception {
     final long len;
+    DocIdsWriter docIdsWriter = new DocIdsWriter(ints.length);
     try (IndexOutput out = dir.createOutput("tmp", IOContext.DEFAULT)) {
-      DocIdsWriter.writeDocIds(ints, 0, ints.length, out);
+      docIdsWriter.writeDocIds(ints, 0, ints.length, out);
       len = out.getFilePointer();
       if (random().nextBoolean()) {
         out.writeLong(0); // garbage
@@ -102,13 +118,13 @@ public class TestDocIdsWriter extends LuceneTestCase {
     }
     try (IndexInput in = dir.openInput("tmp", IOContext.READONCE)) {
       int[] read = new int[ints.length];
-      DocIdsWriter.readInts(in, ints.length, read);
+      docIdsWriter.readInts(in, ints.length, read);
       assertArrayEquals(ints, read);
       assertEquals(len, in.getFilePointer());
     }
     try (IndexInput in = dir.openInput("tmp", IOContext.READONCE)) {
       int[] read = new int[ints.length];
-      DocIdsWriter.readInts(
+      docIdsWriter.readInts(
           in,
           ints.length,
           new IntersectVisitor() {
